src/parser.c
#include "./parser.h"
#include "./base.h"
#include "./mem.h"
#include "./parser_callback.h"
#include "./opcode.h"


// helper function
char* lx_helper_dump_token(lx_token *token, char * outstr)
{
    char token_text[LX_CONFIG_IDENTIFIER_MAX_LENGTH + 1];
    if(token->text_len > 0 && token->text_len < LX_CONFIG_IDENTIFIER_MAX_LENGTH){
        memcpy(token_text, token->text, token->text_len);
        token_text[token->text_len] = '\0';
    }else{
        token_text[0] = '\0';
    }
    sprintf(outstr, "T%d,%d,%s,L%d", token->type, token->text_len, token_text, token->linenum);
    return outstr;
}

void lx_helper_dump_bytecode(lx_opcodes* ops)
{
    char tem[1024];
    char tem2[1024];
    printf("============ show readable bytecode ===============\n");
    for(int i = 0; i < ops->size; ++i){
        tem[0] = '\0';
        if(! lx_opcode_is_label(ops->arr[i]->type))
            sprintf(tem, "    "); // use 4 spaces to replace \t
        sprintf(tem + strlen(tem), "%s", lx_opcode_to_string(ops->arr[i], tem2));
        if(ops->arr[i]->extra_info != -1){
            if(strlen(tem) < 40){
                memset((char*)tem + strlen(tem), ' ', 40 - strlen(tem));
                tem[40] = '\0';
            }
            printf("%s; %s\n", tem, lx_opcode_expr_info_to_string(ops->arr[i]->extra_info));
        }else{
            printf("%s\n", tem);
        }
    }
    printf("=========== readable bytecode end =====================\n");
}


//
// Token Scanner - internal use
//

static lx_token lx_token_no_more;

static lx_token* add_one_token(lx_token_scanner *s, int token_type, char *ptr, int text_len, int linenum)
{
#if(LX_PARSER_DEBUG_LOG)
    if(token_type < 255)
        printf("add_one_token: %d[%c] L%d\n", token_type, token_type, linenum);
    else
        printf("add_one_token: %d, L%d\n", token_type, linenum);
#endif
    s->token_number ++;
    if(s->token_number > s->tokens_capacity){
        lx_token **tem_tokens = (lx_token**)lx_malloc(sizeof(lx_token*) * (s->tokens_capacity / LX_CONFIG_TOKEN_GRAIN + 1) * LX_CONFIG_TOKEN_GRAIN);
        if (s->tokens) {
            memcpy(tem_tokens, s->tokens, s->tokens_capacity * sizeof(lx_token*));
            lx_free(s->tokens);
        }
        s->tokens = tem_tokens;
        s->tokens_capacity += LX_CONFIG_TOKEN_GRAIN;
    }
    lx_token* t = LX_NEW(lx_token);
    t->type = token_type;
    t->text = ptr;
    t->text_len = text_len;
    t->linenum = linenum;
    s->tokens[s->token_number - 1] = t;
    return t;
}

static lx_token* token_error(lx_token_scanner *s, char *ptr, int linenum)
{
    return add_one_token(s, LX_TOKEN_ERROR, ptr, 1, linenum);
}

void lx_delete_token_scanner(lx_token_scanner * s)
{
    lx_free(s->raw_source_code);
    for (int i = 0; i < s->token_number; ++i) {
        lx_free(s->tokens[i]);
    }
    lx_free(s->tokens);
    lx_free(s);
}

lx_token_scanner* lx_scan_token(char *source_code, const int source_code_length)
{
    lx_token_scanner * s = LX_NEW(lx_token_scanner);
    if(!s)
        return NULL;
    s->raw_source_code = source_code;
    s->raw_source_code_length = (int)source_code_length;
    s->tokens_capacity = 0;
    s->token_number = 0;
    s->tokens = NULL;
    s->curr = -1;

    // init global variable lx_token_no_more
    lx_token_no_more.linenum = -1;
    lx_token_no_more.text = source_code + (int)source_code_length;
    lx_token_no_more.text_len = 0;
    lx_token_no_more.type = LX_TOKEN_NO_MORE;

    char *p = source_code;

    int linenum = 1;
    //char vartem[LX_CONFIG_IDENTIFIER_MAX_LENGTH];
    while(p - source_code < source_code_length){
        // find one token
        if (*p == '\0') {
            assert(false);
            return NULL;
        }
        if (memcmp(p, "--[[", 4) == 0) {
            int i = 0;
            for (; p + i < source_code + source_code_length; ++i) {
                if (*(p + i) == '\n')
                    ++linenum;
                if (*(p + i) == ']' && *(p + i + 1) == ']') {
                    ++i;
                    break;
                }
            }
            p += i + 1;
            continue;
        }
        if(memcmp("//", p, 2) == 0 || memcmp("--", p, 2) == 0){
            int i = 0;
            for (; p + i < source_code + source_code_length && *(p + i) != '\n'; ++i)
                ;
            p += i;
            continue;
        }
        if (memcmp(p, "/*", 2) == 0) {
            int i = 0;
            for (; p + i < source_code + source_code_length; ++i) {
                if (*(p + i) == '\n')
                    ++linenum;
                if (*(p + i) == '*' && *(p + i + 1) == '/') {
                    ++i;
                    break;
                }
            }
            p += i + 1;
            continue;
        }
        if (memcmp(p, "break", 5) == 0) {
            add_one_token(s, LX_TOKEN_BREAK, p, 5, linenum);
            p += 5;
            continue;
        }
        if (memcmp(p, "continue", 8) == 0) {
            add_one_token(s, LX_TOKEN_CONTINUE, p, 8, linenum);
            p += 8;
            continue;
        }
        if (memcmp(p, "return", 6) == 0) {
            add_one_token(s, LX_TOKEN_RETURN, p, 6, linenum);
            p += 6;
            continue;
        }
        if (memcmp(p, "if", 2) == 0) {
            add_one_token(s, LX_TOKEN_IF, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "then", 4) == 0) {
            add_one_token(s, LX_TOKEN_THEN, p, 4, linenum);
            p += 4;
            continue;
        }
        if (memcmp(p, "else", 4) == 0) {
            add_one_token(s, LX_TOKEN_ELSE, p, 4, linenum);
            p += 4;
            continue;
        }
        if (memcmp(p, "while", 5) == 0) {
            add_one_token(s, LX_TOKEN_WHILE, p, 5, linenum);
            p += 5;
            continue;
        }
        if (memcmp(p, "for", 3) == 0) {
            add_one_token(s, LX_TOKEN_FOR, p, 3, linenum);
            p += 3;
            continue;
        }
        if (memcmp(p, "function", 8) == 0) {
            add_one_token(s, LX_TOKEN_FUNCTION, p, 8, linenum);
            p += 8;
            continue;
        }
        if (memcmp(p, "end", 3) == 0) {
            add_one_token(s, LX_TOKEN_END, p, 3, linenum);
            p += 3;
            continue;
        }
        if (memcmp(p, "local", 5) == 0) {
            add_one_token(s, LX_TOKEN_LOCAL, p, 5, linenum);
            p += 5;
            continue;
        }
        if (memcmp(p, "not", 3) == 0) {
            add_one_token(s, LX_TOKEN_NOT, p, 3, linenum);
            p += 3;
            continue;
        }
        if (memcmp(p, "and", 3) == 0) {
            add_one_token(s, LX_TOKEN_AND, p, 3, linenum);
            p += 3;
            continue;
        }
        if (memcmp(p, "or", 2) == 0) {
            add_one_token(s, LX_TOKEN_OR, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "<=", 2) == 0) {
            add_one_token(s, LX_TOKEN_LESS_EQL, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, ">=", 2) == 0) {
            add_one_token(s, LX_TOKEN_GREATER_EQL, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "==", 2) == 0) {
            add_one_token(s, LX_TOKEN_EQL_EQL, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "!=", 2) == 0) {
            add_one_token(s, LX_TOKEN_NOT_EQL, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "+=", 2) == 0) {
            add_one_token(s, LX_TOKEN_ADD_EQL, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "-=", 2) == 0) {
            add_one_token(s, LX_TOKEN_SUB_EQL, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "*=", 2) == 0) {
            add_one_token(s, LX_TOKEN_MUL_EQL, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "/=", 2) == 0) {
            add_one_token(s, LX_TOKEN_DIV_EQL, p, 2, linenum);
            p += 2;
            continue;
        }
        if (memcmp(p, "nil", 3) == 0) {
            add_one_token(s, LX_TOKEN_NIL, p, 3, linenum);
            p += 3;
            continue;
        }
        if (memcmp(p, "false", 5) == 0) {
            add_one_token(s, LX_TOKEN_FALSE, p, 5, linenum);
            p += 5;
            continue;
        }
        if (memcmp(p, "true", 4) == 0) {
            add_one_token(s, LX_TOKEN_TRUE, p, 4, linenum);
            p += 4;
            continue;
        }

        int type = -1;
        switch (*p) {
        case ' ':
        case '\r':
        case '\t':
            ++p;
            continue;
        case '\n':
            ++linenum;
            ++p;
            continue;
        case '+':
            type = '+';
            break;
        case '-':
            type = '-';
            break;
        case '*':
            type = '*';
            break;
        case '/':
            type = '/';
            break;
        case '=':
            type = '=';
            break;
        case '<':
            type = '<';
            break;
        case '>':
            type = '>';
            break;
        case '(':
            type = '(';
            break;
        case ')':
            type = ')';
            break;
        case '[':
            type = '[';
            break;
        case ']':
            type = ']';
            break;
        case '{':
            type = '{';
            break;
        case '}':
            type = '}';
            break;
        case ';':
            type = ';';
            break;
        case ':':
            type = ':';
            break;
        case ',':
            type = ',';
            break;
        case '.':
            type = '.';
            break;
        default: {
            if (isdigit(*p)) {
                char * pp = p;
                double data = strtod(p, &pp);
                if ((pp - p) == 0) {
                    token_error(s, p, linenum);
                    return s;
                }
                add_one_token(s, LX_TOKEN_NUMBER_IMMEDIATE, p, pp - p, linenum);
                p = pp;
                continue;
            } else if (isalpha(*p) || *p == '_') {
                int i = 1;
                while (*(p + i) != '\0' && (isalnum(*(p + i)) || *(p + i) == '_'))
                    ++i;

                add_one_token(s, LX_TOKEN_IDENTIFIER, p, i, linenum);
                p += i;
                continue;
            } else if(*p == '"'){
                char * changed = p;
                char * curr = p + 1;
                while(*curr != '"'){
                    if(*curr == '\\'){
                        // we need to zhuanyi <-todo
                        ++curr;
                        switch(*curr){
                        case 'n':
                            *changed = '\n';
                            break;
                        case 't':
                            *changed = '\t';
                            break;
                        case 'r':
                            *changed = '\r';
                            break;
                        case '\\':
                            *changed = '\\';
                            break;
                        case '"':
                            *changed = '"';
                            break;
                        default:
                            // todo: add error info: ...
                            token_error(s, curr - 1, linenum);
                            return s;
                        }
                    }else{
                        *changed = *curr;
                    }
                    ++curr;
                    ++changed;
                }
                *changed = '\0'; // no need to do this
                add_one_token(s, LX_TOKEN_STRING_IMMEDIATE, p, changed - p, linenum);
                p = curr + 1;
                continue;
            } else if(*p == '\''){
                char * changed = p;
                char * curr = p + 1;
                while(*curr != '\''){
                    if(*curr == '\\'){
                        // we need to zhuanyi <-todo
                        ++curr;
                        switch(*curr){
                        case 'n':
                            *changed = '\n';
                            break;
                        case 't':
                            *changed = '\t';
                            break;
                        case 'r':
                            *changed = '\r';
                            break;
                        case '\\':
                            *changed = '\\';
                            break;
                        case '\'':
                            *changed = '\'';
                            break;
                        default:
                            // todo: add error info: ...
                            token_error(s, curr - 1, linenum);
                            return s;
                        }
                    }else{
                        *changed = *curr;
                    }
                    ++curr;
                    ++changed;
                }
                *changed = '\0'; // no need to do this
                add_one_token(s, LX_TOKEN_STRING_IMMEDIATE, p, changed - p, linenum);
                p = curr + 1;
                continue;
            } else {
                token_error(s, p, linenum);
                return s;
            }
            break;
        }
        }
        add_one_token(s, type, p, 1, linenum);
        ++p;
    }
    // scan all source code successful
    return s;
}
lx_token* lx_token_nextN(lx_token_scanner *s, int n)
{
    if (s->curr >= s->token_number - n)
        return &lx_token_no_more;
    else
        return s->tokens[s->curr + n];
}
lx_token* lx_token_next(lx_token_scanner *s)
{
    //if (s->curr >= s->token_number - 1)
    //    return &lx_token_end;
    //else
    //return s->tokens[s->curr + 1];
    return lx_token_nextN(s, 1);
}
int lx_token_scanner_get_curr_state(lx_token_scanner *s)
{
    return s->curr;
}
/**
 * return: the state before apply this new state.
 */
int lx_token_scanner_recover_state(lx_token_scanner *s, int new_state) {
    if (new_state < -1){
        assert(false && "new_statem must >= -1");
        return -1;
    }
    s->curr = new_state;
    return 0;
}

int lx_token_scanner_move_forward(lx_token_scanner *s, int step)
{
    if (s->curr + step < -1 || s->curr + step >= s->token_number){
        assert(false && "you must keep s->curr in the right range");
        return -1;
    }
    s->curr += step;
    return 0;
}

// helper macro
#define CURR(_parser) (lx_token_nextN(_parser->scanner, 0))
#define NEXT(_parser) (lx_token_next(_parser->scanner))
#define NEXT_TYPE_EQUAL(_parser, _type) (NEXT(_parser)->type == _type)
#define GOTO_NEXT(_parser) (lx_token_scanner_move_forward(_parser->scanner, 1))


//
// Recursive Descent Parser
//

// forward declaration
static int compile_unit(lx_parser *p, lx_syntax_node *self);
static int stmt_sequence(lx_parser *p, lx_syntax_node *self);
static int stmt(lx_parser *p, lx_syntax_node *self);
static int if_stmt(lx_parser *p, lx_syntax_node *self);
static int while_stmt(lx_parser *p, lx_syntax_node *self);
static int for_stmt(lx_parser *p, lx_syntax_node *self);
static int expr_stmt(lx_parser *p, lx_syntax_node *self);
static int expr_list(lx_parser *p, lx_syntax_node *self);
static int prefix_expr_list(lx_parser *p, lx_syntax_node *self);

static int expr(lx_parser *p, lx_syntax_node *self);
static int assign_expr(lx_parser *p, lx_syntax_node *self);
static int logical_expr(lx_parser *p, lx_syntax_node *self);
static int compare_expr(lx_parser *p, lx_syntax_node *self);
static int addtive_expr(lx_parser *p, lx_syntax_node *self);
static int multiply_expr(lx_parser *p, lx_syntax_node *self);
static int prefix_expr(lx_parser *p, lx_syntax_node *self);
static int suffix_expr(lx_parser *p, lx_syntax_node *self);
static int single_expr(lx_parser *p, lx_syntax_node *self);
static int suffix_op(lx_parser *p, lx_syntax_node *self);

static int immediate(lx_parser *p, lx_syntax_node *self);
static int object_immediate(lx_parser *p, lx_syntax_node *self);
static int object_immediate_item_list(lx_parser *p, lx_syntax_node *self);
static int object_immediate_item(lx_parser *p, lx_syntax_node *self);
static int object_immediate_item_value(lx_parser *p, lx_syntax_node *self);

static int function_define(lx_parser *p, lx_syntax_node *self);
static int identifier_list(lx_parser *p, lx_syntax_node *self);

static int assign_op(lx_parser *p, lx_syntax_node *self);
static int logical_op(lx_parser *p, lx_syntax_node *self);
static int compare_op(lx_parser *p, lx_syntax_node *self);
static int addtive_op(lx_parser * p, lx_syntax_node * self);
static int multiply_op(lx_parser *p, lx_syntax_node* self);
static int prefix_op(lx_parser * p, lx_syntax_node *self);


static int lx_parser_begin(lx_parser * p, lx_parser *parser)
{

}

lx_parser* lx_genBytecode(const char* _source_code, const int source_code_length)
{
    char * source_code = (char*)lx_malloc(source_code_length + 1);
    memcpy(source_code, _source_code, source_code_length);
    *(source_code + source_code_length) = '\0';

    lx_token_scanner* scanner = lx_scan_token(source_code, source_code_length);
    if(scanner == NULL){
        printf("lx_scan_token return NULL\n");
        return NULL;
    }
    lx_parser* p = LX_NEW(lx_parser);
#if(LX_USING_STACK_ALLOCATOR_IN_PARSER)
    p->stack_allocator = lx_stack_allocator_create(1024 * 4);
#endif
    p->scanner = scanner;
    NEW_SYNTAX_NODE(compile_unit_node);
    int ret = compile_unit(p, compile_unit_node);
    if(ret != 0){
        FREE_SYNTAX_NODE(compile_unit_node);
        lx_delete_parser(p);
        debuglog("compile_unit didn't return 0");
        // todo:
        lx_token* curr = lx_token_nextN(p->scanner, 0);
        printf("Parsr Error: parser failed at L%d: text_len:%d type:%d %s\n", curr->linenum, curr->text_len, curr->type, curr->text);
        return NULL;
    }
    p->opcodes = genBytecode(compile_unit_node);
    FREE_SYNTAX_NODE(compile_unit_node);
    return p;
}
void lx_delete_parser(lx_parser* p)
{
#if(LX_USING_STACK_ALLOCATOR_IN_PARSER)
    lx_stack_allocator_delete(p->stack_allocator);
#endif
    lx_delete_token_scanner(p->scanner);
    lx_free(p);
}


static int compile_unit(lx_parser *p, lx_syntax_node *self)
{
    NEW_SYNTAX_NODE(stmt_sequence_node);
    if (stmt_sequence(p, stmt_sequence_node) == 0) {
        LX_CALLBACK_CALL1(compile_unit, stmt_sequence,
            self, stmt_sequence_node);
        return 0;
    }
    FREE_SYNTAX_NODE(stmt_sequence_node);
    return -1;
}

static int stmt_sequence(lx_parser *p, lx_syntax_node *self)
{
    NEW_SYNTAX_NODE(stmt_node);
    if (stmt(p, stmt_node) == 0) {
        NEW_SYNTAX_NODE(stmt_sequence_node);
        if (stmt_sequence(p, stmt_sequence_node) == 0) {
            LX_CALLBACK_CALL2(stmt_sequence, stmt, stmt_sequence,
                self, stmt_node, stmt_sequence_node);
            return 0;
        }
        FREE_SYNTAX_NODE(stmt_sequence_node);
        LX_CALLBACK_CALL1(stmt_sequence, stmt,
            self, stmt_node);
        return 0;
    }
    FREE_SYNTAX_NODE(stmt_node);
    LX_CALLBACK_CALL1(stmt_sequence, EMPTY_SYMBOL,
        self, NULL);
    return 0;
}

static int stmt(lx_parser *p, lx_syntax_node *self)
{
    int backup_state = lx_token_scanner_get_curr_state(p->scanner);

    if (NEXT_TYPE_EQUAL(p, ';')) {
        GOTO_NEXT(p);
        NEW_SYNTAX_NODE_T(eos_node, CURR(p));
        LX_CALLBACK_CALL1(stmt, EOS,
            self, eos_node);
        return 0;
    }

    NEW_SYNTAX_NODE(if_stmt_node);
    if (if_stmt(p, if_stmt_node) == 0) {
        LX_CALLBACK_CALL1(stmt, if_stmt,
            self, if_stmt_node);
        return 0;
    }
    FREE_SYNTAX_NODE(if_stmt_node);

    NEW_SYNTAX_NODE(while_stmt_node);
    if (while_stmt(p, while_stmt_node) == 0) {
        LX_CALLBACK_CALL1(stmt, while_stmt,
            self, while_stmt_node);
        return 0;
    }
    FREE_SYNTAX_NODE(while_stmt_node);

    NEW_SYNTAX_NODE(for_stmt_node);
    if (for_stmt(p, for_stmt_node) == 0) {
        LX_CALLBACK_CALL1(stmt, for_stmt,
            self, for_stmt_node);
        return 0;
    }
    FREE_SYNTAX_NODE(for_stmt_node);

    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_BREAK)) {
        GOTO_NEXT(p);
        NEW_SYNTAX_NODE_T(break_node, CURR(p));
        if (NEXT_TYPE_EQUAL(p, ';')) {
            GOTO_NEXT(p);
            NEW_SYNTAX_NODE_T(eos_node, CURR(p));
            LX_CALLBACK_CALL2(stmt, BREAK, EOS,
                self, break_node, eos_node);
            return 0;
        }
        FREE_SYNTAX_NODE(break_node);
        lx_token_scanner_recover_state(p->scanner, backup_state);
        return -1; // no need to continue
    }
    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_CONTINUE)) {
        GOTO_NEXT(p);
        NEW_SYNTAX_NODE_T(continue_node, CURR(p));
        if (NEXT_TYPE_EQUAL(p, ';')) {
            GOTO_NEXT(p);
            NEW_SYNTAX_NODE_T(eos_node, CURR(p));
            LX_CALLBACK_CALL2(stmt, CONTINUE, EOS,
                self, continue_node, eos_node);
            return 0;
        }
        FREE_SYNTAX_NODE(continue_node);
        lx_token_scanner_recover_state(p->scanner, backup_state);
        return -1; // no need to continue
    }
    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_RETURN)) {
        GOTO_NEXT(p);
        NEW_SYNTAX_NODE_T(return_node, CURR(p));
        if (NEXT_TYPE_EQUAL(p, ';')) {
            GOTO_NEXT(p);
            NEW_SYNTAX_NODE_T(eos_node, CURR(p));
            LX_CALLBACK_CALL2(stmt, RETURN, EOS,
                self, return_node, eos_node);
            return 0;
        }
        NEW_SYNTAX_NODE(expr_list_node);
        if (expr_list(p, expr_list_node) == 0) {
            if (NEXT_TYPE_EQUAL(p, ';')) {
                GOTO_NEXT(p);
                NEW_SYNTAX_NODE_T(eos_node, CURR(p));
                LX_CALLBACK_CALL3(stmt, RETURN, expr_list, EOS,
                    self, return_node, expr_list_node, eos_node);
                return 0;
            }
        }
        FREE_SYNTAX_NODE(expr_list_node);
        FREE_SYNTAX_NODE(return_node);
    }
    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_LOCAL)) {
        GOTO_NEXT(p);
        NEW_SYNTAX_NODE_T(local_node, CURR(p));
        NEW_SYNTAX_NODE(identifier_list_node);
        if (identifier_list(p, identifier_list_node) == 0) {
            if (NEXT_TYPE_EQUAL(p, ';')) {
                GOTO_NEXT(p);
                NEW_SYNTAX_NODE_T(eos_node, CURR(p));
                LX_CALLBACK_CALL3(stmt, LOCAL, identifier_list, EOS,
                    self, local_node, identifier_list_node, eos_node);
                return 0;
            }
            if (NEXT_TYPE_EQUAL(p, '=')) {
                GOTO_NEXT(p);
                NEW_SYNTAX_NODE_T(eql_node, CURR(p));
                NEW_SYNTAX_NODE(expr_list_node);
                if (expr_list(p, expr_list_node) == 0) {
                    if (NEXT_TYPE_EQUAL(p, ';')) {
                        GOTO_NEXT(p);
                        NEW_SYNTAX_NODE_T(eos_node, CURR(p));
                        LX_CALLBACK_CALL5(stmt, LOCAL, identifier_list, EQL, expr_list, EOS,
                            self, local_node, identifier_list_node, eql_node, expr_list_node, eos_node);
                        return 0;
                    }
                }
                FREE_SYNTAX_NODE(expr_list_node);
                FREE_SYNTAX_NODE(eql_node);
            }
        }
        FREE_SYNTAX_NODE(identifier_list_node);
        FREE_SYNTAX_NODE(local_node);
    }

    NEW_SYNTAX_NODE(expr_stmt_node);
    if (expr_stmt(p, expr_stmt_node) == 0) {
        LX_CALLBACK_CALL1(stmt, expr_stmt,
            self, expr_stmt_node);
        return 0;
    }
    FREE_SYNTAX_NODE(expr_stmt_node);

    lx_token_scanner_recover_state(p->scanner, backup_state);
    return -1;
}

static int if_stmt(lx_parser *p, lx_syntax_node *self)
{
    int backup_state = lx_token_scanner_get_curr_state(p->scanner);

    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_IF)) {
        GOTO_NEXT(p);
        NEW_SYNTAX_NODE_T(if_node, CURR(p));
        NEW_SYNTAX_NODE(expr_node);
        if (expr(p, expr_node) == 0) {
            if (NEXT_TYPE_EQUAL(p, LX_TOKEN_THEN)) {
                GOTO_NEXT(p);
                NEW_SYNTAX_NODE_T(then_node, CURR(p));
                NEW_SYNTAX_NODE(stmt_sequence_node);
                if (stmt_sequence(p, stmt_sequence_node) == 0) {
                    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_END)) {
                        GOTO_NEXT(p);
                        NEW_SYNTAX_NODE_T(end_node, CURR(p));
                        LX_CALLBACK_CALL5(if_stmt, IF, expr, THEN, stmt_sequence, END,
                            self, if_node, expr_node, then_node, stmt_sequence_node, end_node);
                        return 0;
                    }
                    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_ELSE)) {
                        GOTO_NEXT(p);
                        NEW_SYNTAX_NODE_T(else_node, CURR(p));
                        NEW_SYNTAX_NODE(stmt_sequence_node2);
                        if (stmt_sequence(p, stmt_sequence_node2) == 0) {
                            if (NEXT_TYPE_EQUAL(p, LX_TOKEN_END)) {
                                GOTO_NEXT(p);
                                NEW_SYNTAX_NODE_T(end_node, CURR(p));
                                LX_CALLBACK_CALL7(if_stmt, IF, expr, THEN, stmt_sequence, ELSE, stmt_sequence, END,
                                    self, if_node, expr_node, then_node, stmt_sequence_node, else_node, stmt_sequence_node2, end_node);
                                return 0;
                            }
                        }
                        FREE_SYNTAX_NODE(stmt_sequence_node2);
                        FREE_SYNTAX_NODE(else_node);
                    }
                }
                FREE_SYNTAX_NODE(stmt_sequence_node);
                FREE_SYNTAX_NODE(then_node);
            }
        }
        FREE_SYNTAX_NODE(expr_node);
        FREE_SYNTAX_NODE(if_node);
    }

    lx_token_scanner_recover_state(p->scanner, backup_state);
    return -1;
}

static int while_stmt(lx_parser *p, lx_syntax_node *self)
{
    int backup_state = lx_token_scanner_get_curr_state(p->scanner);

    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_WHILE)) {
        GOTO_NEXT(p);
        NEW_SYNTAX_NODE_T(while_node, CURR(p));
        NEW_SYNTAX_NODE(expr_node);
        if (expr(p, expr_node) == 0) {
            if (NEXT_TYPE_EQUAL(p, LX_TOKEN_THEN)) {
                GOTO_NEXT(p);
                NEW_SYNTAX_NODE_T(then_node, CURR(p));
                NEW_SYNTAX_NODE(stmt_sequence_node);
                if (stmt_sequence(p, stmt_sequence_node) == 0) {
                    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_END)) {
                        GOTO_NEXT(p);
                        NEW_SYNTAX_NODE_T(end_node, CURR(p));
                        LX_CALLBACK_CALL5(while_stmt, WHILE, expr, THEN, stmt_sequence, END,
                            self, while_node, expr_node, then_node, stmt_sequence_node, end_node);
                        return 0;
                    }
                }
                FREE_SYNTAX_NODE(stmt_sequence_node);
                FREE_SYNTAX_NODE(then_node);
            }
        }
        FREE_SYNTAX_NODE(expr_node);
        FREE_SYNTAX_NODE(while_node);
    }

    lx_token_scanner_recover_state(p->scanner, backup_state);
    return -1;
}

static int for_stmt(lx_parser *p, lx_syntax_node *self)
{
    int backup_state = lx_token_scanner_get_curr_state(p->scanner);

    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_FOR)) {
        GOTO_NEXT(p);
        NEW_SYNTAX_NODE_T(for_node, CURR(p));
        NEW_SYNTAX_NODE(expr_node);
        if (expr(p, expr_node) == 0) {
            if (NEXT_TYPE_EQUAL(p, ';')) {
                GOTO_NEXT(p);
                NEW_SYNTAX_NODE_T(eos_node, CURR(p));
                NEW_SYNTAX_NODE(expr_node2);
                if (expr(p, expr_node2) == 0) {
                    if (NEXT_TYPE_EQUAL(p, ';')) {
                        GOTO_NEXT(p);
                        NEW_SYNTAX_NODE_T(eos_node2, CURR(p));
                        NEW_SYNTAX_NODE(expr_node3);
                        if (expr(p, expr_node3) == 0) {
                            if (NEXT_TYPE_EQUAL(p, LX_TOKEN_THEN)) {
                                GOTO_NEXT(p);
                                NEW_SYNTAX_NODE_T(then_node, CURR(p));
                                NEW_SYNTAX_NODE(stmt_sequence_node);
                                if (stmt_sequence(p, stmt_sequence_node) == 0) {
                                    if (NEXT_TYPE_EQUAL(p, LX_TOKEN_END)) {
                                        GOTO_NEXT(p);
                                        NEW_SYNTAX_NODE_T(end_node, CURR(p));
                                        LX_CALLBACK_CALL9(for_stmt, FOR, expr, EOS, expr, EOS, expr, THEN, stmt_sequence, END,
                                            self, for_node, expr_node, eos_node, expr_node2, eos_node2, expr_node3, then_node, stmt_sequence_node, end_node);
                                        return 0;
                                    }
                                }
                                FREE_SYNTAX_NODE(stmt_sequence_node);
                                FREE_SYNTAX_NODE(then_node);
                            }
                        }
                        FREE_SYNTAX_NODE(expr_node3);
